<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Flower</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="scroll_aware_fab_behavior">com.andy.flower.views.widgets.ScrollAwareFABBehavior</string>

    <string name="action_like">喜欢</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_out">注销</string>
    <string name="login_label">登录</string>
    <string name="pin_item_detail">采集详情</string>

    <string name="user_name">UserName</string>
    <string name="user_password">Password</string>
    <string name="user_register">注册</string>
    <string name="login_successful">登录成功</string>
    <string name="logining_label">登录中。。。</string>


    <string name="message_net_error">网络错误 请检查网络</string>
    <string name="message_timeout_error">连接超时 请检查网络</string>
    <string name="message_password_error">密码错误</string>
    <string name="message_server_error">连接服务器失败</string>
    <string name="message_unknown_error">未知错误</string>
    <string name="message_data_error">数据解析错误</string>

    <string name="load_fail_label">加载失败</string>

    <string name="load_empty_label">列表为空</string>

    <string name="owner_des">由<xliff:g ID="owner_name">%1$s</xliff:g>收集到<xliff:g ID="board_name">%2$s</xliff:g></string>
    <!--设置-->
    <string name="pref_general_category">通用</string>
    <string name="pref_general_theme">主题配色</string>
    <string name="pref_general_cache">清除缓存</string>
    <string name="sure">确定</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="clear_cache_fail">清除缓存失败</string>
    <string name="pref_about_title">关于</string>
    <string name="pref_about_summary">flower应用客户端</string>
    <string name="pref_source_title">源代码</string>
    <string name="pref_source_summary">https://github.com/duaiyun1314/Flower</string>
    <string name="pref_author_summary">duaiyun1314</string>
    <string name="pref_author_title">开发者</string>
    <string name="pref_author_data">https://github.com/duaiyun1314</string>
    <string name="pref_version_title">版本</string>
    <string name="login_info">login_info</string>

    <string name="text_foot_error">加载失败，点击重试</string>
    <string name="text_foot_end">-- END --</string>
    <string name="text_foot_loading">正在加载。。。</string>
    <string name="weekly_label">Flower周刊</string>
    <string name="click_2Exit">再按一次返回键退出</string>
    <string name="by_label">由</string>
    <string name="from_label">从</string>
    <string name="to_label">采集到</string>
    <string name="action_download">下载</string>
    <string name="action_regather">转采</string>
    <string name="action_comment">评论</string>
    <string name="action_share">分享</string>
    <string name="image_has_exist">图片已经下载</string>
    <string name="image_download_ok">图片成功下载到系统相册</string>
    <string name="image_download_fail">图片下载失败</string>
    <string name="cancel">取消</string>
    <string name="comment_not_empty">内容不能为空</string>
    <string name="comment_fail">评论失败</string>
    <string name="comment_success">评论成功</string>
    <string name="comments_num"><xliff:g ID="comments_num">%1$d</xliff:g>评论</string>
    <string name="user_is_null">用户信息为空</string>
    <string name="follow_off">取消关注</string>
    <string name="follow_on">关注</string>
    <string name="hold_on">请稍后</string>
    <string name="confirm_label">确定</string>
    <string name="allow">确定</string>
    <string name="deny">取消</string>
    <string name="logout_label">确定要退出当前账号吗？</string>
</resources>
