<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_general_category">
        <com.andy.flower.views.preference.ThemePreference />
        <Preference
            android:key="@string/pref_general_cache"
            android:title="@string/pref_general_cache" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about_title">
        <Preference
            android:summary="@string/pref_about_summary"
            android:title="@string/pref_about_title" />
        <Preference
            android:summary="@string/pref_source_summary"
            android:title="@string/pref_source_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_source_summary" />
        </Preference>
        <Preference
            android:summary="@string/pref_author_summary"
            android:title="@string/pref_author_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_author_data" />
        </Preference>
        <Preference
            android:key="@string/pref_version_title"
            android:title="@string/pref_version_title" />
    </PreferenceCategory>
</PreferenceScreen>